--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/styles.css" >
   <title>Smashing Magazine</title>
 </head>
 <body>
-  
+  <nav>
+    <a class="nav-element">Oyeleke</a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <a class="nav-element"></a>
+    <form class="nav-element"><input/></form>
+  </nav>
 </body>
 </html>
