Add articles for the top-section Add styling for the articles for the top-section

--- a/index.html
+++ b/index.html
@@ -8,18 +8,46 @@
 </head>
 <body>
   <nav>
-    <a class="nav-element">Oyeleke</a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
-    <a class="nav-element"></a>
+    <a class="nav-element">Smashing Magazine</a>
+    <a class="nav-element">Articles</a>
+    <a class="nav-element">Guides</a>
+    <a class="nav-element">Books</a>
+    <a class="nav-element">Events</a>
+    <a class="nav-element">Membership</a>
+    <a class="nav-element">Jobs</a>
+    <a class="nav-element">Newsletter</a>
+    <a class="nav-element">Podcast</a>
+    <a class="nav-element">Write for us</a>
+    <a class="nav-element">More</a>
     <form class="nav-element"><input/></form>
   </nav>
+  <main>
+    <div class="top-section">
+      <article>
+        <p>Iris Ljsenjanin</p>
+        <p>A monthly update On</p>
+        <p>All Things Smashing</p>
+        <p><small> Leave a comment</small></p>
+        <p>Smashing Monthly Roundup <sup>9</sup></p>
+      </article>
+      <article>
+        <p>Frederick O'brien wrote</p>
+        <p>Don't Miss These Lastest <br>Articles</p>
+        <p>Frederick O'Brien wrote</p>
+        <p>What Vitrous Can<br>Teach Us About Web<br>Design</p>
+        <p><small>#User Experience<sup>304</sup></small><small>#Design<sup>439</sup></small></p>
+        <p><small>Trends<sup>26</sup></small></p>
+       </article>
+      <article>
+        <p>Seriously red?</p>
+        <p>Kevin Omereshone wrote</p>
+        <p>Mirage JS Deepdive:</p>
+        <p>Using Mirage JS And </p>
+        <p>Cypress for UI Testing</p>
+        <p>Tasting Part 4</p>
+        <p><small>#UI<sup>83</sup>#API<sup>54</sup>#Testing<sup>50</sup></small></p>
+      </article>
+    </div>
+  </main>
 </body>
 </html>
