Second and third sections added

--- a/index.html
+++ b/index.html
@@ -48,6 +48,80 @@
         <p><small>#UI<sup>83</sup>#API<sup>54</sup>#Testing<sup>50</sup></small></p>
       </article>
     </div>
+    <div class="second-section">
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+    </div>
+    <div class="third-section">
+      <article>
+        <h1>Lorem Ipsum</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+        </p>
+        <button>Lorem Ipsum</button>
+        <p>Already have an accoun. <a href="www.yutube.com">Sign In</a></p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+    </div>
   </main>
 </body>
 </html>
