Add sixth and seventh articles Add styling to the sixth and seventh articles

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
         </p>
         <button>Lorem Ipsum</button>
-        <p>Already have an accoun. <a href="www.yutube.com">Sign In</a></p>
+        <p>Already have an accoun. <a href="www.youtube.com">Sign In</a></p>
         <div class="arrow"></div>
       </article>
       <article>
@@ -122,6 +122,79 @@
         <div class="arrow"></div>
       </article>
     </div>
+    <div class="fourth-section">
+      <article>
+        <h1>Lorem Ipsum</h1>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+        </p>
+        <button>Lorem Ipsum</button>
+        <p>Already have an accoun. <a href="www.youtube.com">Sign In</a></p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+      <article>
+        <h1>Solving Cross-Platform</h1>
+        <h5>by Carmin Zaccagnino</h5>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text 
+          ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived 
+          not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 
+          1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
+          Aldus PageMaker including versions of Lorem Ipsum.
+        </p>
+        <div class="arrow"></div>
+      </article>
+    </div>
+    <div class="fifth-article">
+      <p><small>lorem Ipsum</small></p>
+    </div>
+    <div class="sixth-article">
+      <article>
+        <h4>Lorem Ipsum</h4>
+        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus rutrum lobortis velit, pretium viverra 
+          mauris placerat et. Nam eget sapien erat. Nam feugiat sapien quis euismod scelerisque. Etiam vitae venenatis
+        </h2>
+        <p> odio, sed fermentum mauris. Praesent ultricies ligula et mi tincidunt, a dignissim diam dapibus. Vestibulum
+          sodales consequat ante, eu vulputate orci commodo sit amet. Aenean pulvinar ante eu nisi bibendum, vitae 
+          varius turpis fermentum</p>
+        <botton>class="button">
+          varius turpis fermentum
+        </botton>
+      </article>
+    </div>
+    <div class="seventh-article">
+      <article>
+        <div id="person">
+          
+        </div>
+        <div>
+          <p>PERSON OF THE WEEK</p>
+          <p>Lisi Linhart is a Creative Developer from Austria who is passionate about web animation. With a background 
+            in coding as well as design, she loves to combine technology with creative ideas — in the animation and UI 
+            experiments she shares on Codepen and the tutorials she publishes on her blog, for example. Lisi is also a 
+            lecturer at the University of Applied Sciences in Salzburg, where she teaches students about front-end 
+            development and design. You can find her on Twitter as @lisi_linhart. Thank you for sharing and caring, 
+            dear Lisi!
+          </p>
+        </div>
+
+      </article>
+
+    </div>
+    
   </main>
 </body>
 </html>
