From eighth to eleventh sections were added

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
         <div class="arrow"></div>
       </article>
     </div>
-    <div class="fifth-article">
+    <div class="fifth-section">
       <p><small>lorem Ipsum</small></p>
     </div>
-    <div class="sixth-article">
+    <div class="sixth-section">
       <article>
         <h4>Lorem Ipsum</h4>
         <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus rutrum lobortis velit, pretium viverra 
@@ -175,12 +175,12 @@
         </botton>
       </article>
     </div>
-    <div class="seventh-article">
+    <div class="seventh-section">
       <article>
         <div id="person">
           
         </div>
-        <div>
+        <div id="week">
           <p>PERSON OF THE WEEK</p>
           <p>Lisi Linhart is a Creative Developer from Austria who is passionate about web animation. With a background 
             in coding as well as design, she loves to combine technology with creative ideas — in the animation and UI 
@@ -190,7 +190,120 @@
             dear Lisi!
           </p>
         </div>
-
+      </article>
+    </div>
+    <div class="eighth-section">
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+      <article>
+        <div class="eight-img"></div>
+        <div>
+          <h4>Sed et lobortis nisi</h4>
+          <h1>Suspendisse lacinia risus eget</h1>
+          <p>
+            Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.
+        </div>
+      </article>
+    </div>
+    <div class="ninth-section">
+      <p>More Links on Twitter</p>
+    </div>
+    <div class="tenth-section">
+      <article>
+        <div>
+          <h4>Sed et lobortis nisi.</h4>
+          <h1>Lorem ipsum</h1>
+          <p>Sed et lobortis nisi. Suspendisse lacinia risus eget ipsum ullamcorper varius. Vestibulum magna justo, pharetra vel 
+            interdum sit amet, eleifend auctor lorem.</p>
+          <button>Lorem Ipsum</button>
+        </div>
+        <div id="book"></div>
+      </article>
+    </div>
+    <div class="eleventh-section">
+      <article>
+        <h6>Sed et lobortis nisi.</h6>
+        <h2>Lorem Ipsum</h2>
+        <p>xperiments she shares on Codepen and the tutorials she publishes on her blog, for example. Lisi is also a 
+          lecturer at the University of Applied Sciences in Salzburg, where she teaches students about front-end</p>
+        <button>Lorem Ipsum</button>
+      </article>
+      <article>
+        <h6>Sed et lobortis nisi.</h6>
+        <h2>Lorem Ipsum</h2>
+        <p>xperiments she shares on Codepen and the tutorials she publishes on her blog, for example. Lisi is also a 
+          lecturer at the University of Applied Sciences in Salzburg, where she teaches students about front-end</p>
+        <button>Lorem Ipsum</button>
+      </article>
+      <article>
+        <h6>Sed et lobortis nisi.</h6>
+        <h2>Lorem Ipsum</h2>
+        <p>xperiments she shares on Codepen and the tutorials she publishes on her blog, for example. Lisi is also a 
+          lecturer at the University of Applied Sciences in Salzburg, where she teaches students about front-end</p>
+        <button>Lorem Ipsum</button>
+      </article>
+      <article>
+        <div id="Newsletter"></div>
+        <h2>Email Newsletter</h2>
+        <p>xperiments she shares on Codepen and the tutorials she publishes on her blog, for example. Lisi is also a 
+          lecturer at the University of Applied Sciences in Salzburg, where she teaches students about front-end</p>
+          <form>
+            <input>
+            <button>Meow</button>
+          </form>
+          <div>
+            <p>Front-end, UX and design. 2× a month.
+              You can always unsubscribe with just 1 click.</p>
+          </div>
       </article>
 
     </div>
