Last styles are added, validator, linter, stickler not checked

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Spinnaker&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles/styles.css" >
   <title>Smashing Magazine</title>
 </head>
@@ -95,7 +96,7 @@
         </p>
         <button>Lorem Ipsum</button>
         <p>Already have an accoun. <a href="www.youtube.com">Sign In</a></p>
-        <div class="arrow"></div>
+        
       </article>
       <article>
         <h1>Solving Cross-Platform</h1>
@@ -131,7 +132,7 @@
         </p>
         <button>Lorem Ipsum</button>
         <p>Already have an accoun. <a href="www.youtube.com">Sign In</a></p>
-        <div class="arrow"></div>
+        <div class="arrow" id="selected-arrow"></div>
       </article>
       <article>
         <h1>Solving Cross-Platform</h1>
@@ -155,7 +156,7 @@
           1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like 
           Aldus PageMaker including versions of Lorem Ipsum.
         </p>
-        <div class="arrow"></div>
+        
       </article>
     </div>
     <div class="fifth-section">
