all checks are done

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
   <main>
     <div class="top-section">
       <article>
-        <p>Iris Ljsenjanin</p>
+        <h2>Iris Ljsenjanin</h2>
         <p>A monthly update On</p>
         <p>All Things Smashing</p>
         <p><small> Leave a comment</small></p>
         <p>Smashing Monthly Roundup <sup>9</sup></p>
       </article>
       <article>
-        <p>Frederick O'brien wrote</p>
+        <h2>Frederick O'brien wrote</h2>
         <p>Don't Miss These Lastest <br>Articles</p>
         <p>Frederick O'Brien wrote</p>
         <p>What Vitrous Can<br>Teach Us About Web<br>Design</p>
@@ -40,7 +40,7 @@
         <p><small>Trends<sup>26</sup></small></p>
        </article>
       <article>
-        <p>Seriously red?</p>
+        <h2>Seriously red?</h2>
         <p>Kevin Omereshone wrote</p>
         <p>Mirage JS Deepdive:</p>
         <p>Using Mirage JS And </p>
@@ -171,16 +171,16 @@
         <p> odio, sed fermentum mauris. Praesent ultricies ligula et mi tincidunt, a dignissim diam dapibus. Vestibulum
           sodales consequat ante, eu vulputate orci commodo sit amet. Aenean pulvinar ante eu nisi bibendum, vitae 
           varius turpis fermentum</p>
-        <botton>class="button">
+        <button>
           varius turpis fermentum
-        </botton>
+        </button>
       </article>
     </div>
     <div class="seventh-section">
       <article>
-        <div id="person">
-          
-        </div>
+        <h2 id="person">
+          Some
+        </h2>
         <div id="week">
           <p>PERSON OF THE WEEK</p>
           <p>Lisi Linhart is a Creative Developer from Austria who is passionate about web animation. With a background 
