Correct mistakes from code review

--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
 <body>
   <nav>
-    <a class="nav-element">Smashing Magazine</a>
-    <a class="nav-element">Articles</a>
-    <a class="nav-element">Guides</a>
-    <a class="nav-element">Books</a>
-    <a class="nav-element">Events</a>
-    <a class="nav-element">Membership</a>
-    <a class="nav-element">Jobs</a>
-    <a class="nav-element">Newsletter</a>
-    <a class="nav-element">Podcast</a>
-    <a class="nav-element">Write for us</a>
-    <a class="nav-element">More</a>
-    <form class="nav-element"><input/></form>
+    <ul>
+      <li><a href="#" class="nav-element">Smashing Magazine</a></li>
+      <li><a href="#" class="nav-element">Articles</a></li>
+      <li><a href="#" class="nav-element">Guides</a></li>
+      <li><a href="#" class="nav-element">Books</a></li>
+      <li><a href="#" class="nav-element">Events</a></li>
+      <li><a href="#" class="nav-element">Membership</a></li>
+      <li><a href="#" class="nav-element">Jobs</a></li>
+      <li><a href="#" class="nav-element">Newsletter</a></li>
+      <li><a href="#" class="nav-element">Podcast</a></li>
+      <li><a href="#" class="nav-element">Write for us</a></li>
+      <li><a href="#" class="nav-element">More</a></li>
+      <li><form class="nav-element"><input/></form></li>
+    </ul>
   </nav>
+  
   <main>
     <div class="top-section">
       <article>
@@ -312,20 +315,52 @@
   </main>
   <footer>
     <h4>BROWSE ALL SMASHING MAGAZINE TOPICS</h4>
-    <p>Accessibility . Android . Animation . Apps . CSS Design . Design Patterns <br>
-      Design . Systems . E-Commerce . Freebies . Graphics . HTMLIllustrator . Inspiration <br>
-      iOS . JavaScript . MobilePattern . Libraries . Performance . Photoshop . Plugins <br>
-      React . Responsive Web Design . Service Workers  . Sketch . Typography . UI <br>
-      Usability . User Experience . Wallpapers . Web Design . WordPress . Workflow</p> <br>
-      <p><small>With a commitment to quality content for the design community. <br>
+    <p><a href="#">Accessibility .</a></p> 
+    <p><a href="#">Android .</a></p> 
+    <p><a href="#">Animation .</a></p> 
+    <p><a href="#">Apps .</a></p> 
+    <p><a href="#">CSS Design .</a></p> 
+    <p><a href="#">Design Patterns .</a></p>
+    <p><a href="#">Design .</a></p>
+    <p><a href="#">Systems .</a></p> 
+    <p><a href="#">E-Commerce .</a></p> 
+    <p><a href="#">Freebies .</a></p> 
+    <p><a href="#">Graphics .</a></p> 
+    <p><a href="#">HTMLIllustrator .</a></p> 
+    <p><a href="#">Inspiration .</a></p>
+    <p><a href="#">iOS .</a></p> 
+    <p><a href="#">JavaScript .</a></p> 
+    <p><a href="#">MobilePattern .</a></p>
+    <p><a href="#">Libraries .</a></p> 
+    <p><a href="#">Performance .</a> </p>
+    <p><a href="#">Photoshop .</a></p> 
+    <p><a href="#">Plugins .</a></p>
+    <p><a href="#">React .</a></p> 
+    <p><a href="#">Responsive Web Design .</a></p> 
+    <p><a href="#">Service Workers  .</a></p> 
+    <p><a href="#">Sketch .</a></p> 
+    <p><a href="#">Typography .</a></p>
+    <p><a href="#">UI .</a></p>
+    <p><a href="#">Usability .</a></p> 
+    <p><a href="#">User Experience .</a></p> 
+    <p><a href="#">Wallpapers .</a></p> 
+    <p><a href="#">Web Design .</a></p> 
+    <p><a href="#">WordPress .</a></p> 
+    <p><a href="#">Workflow</a></p>
+    <p><small>With a commitment to quality content for the design community. <br>
 
         Founded by Vitaly Friedman and Sven Lennartz. 2006–2020. <br>
         
         Smashing is proudly running on Netlify. <br>
         
         Fonts by Latinotype.</small></p>
-        <p><small>✎ Write for usContact usAbout us (Impressum)Privacy policy</small></p>
-        <p><small>Membershiplogin Delivery times Advertise</small></p>
+        <p><small><a href="#">✎ Write for us</a></small></p>
+        <p><small><a href="#">Contact us</a></small></p>
+        <p><small><a href="#">About us (Impressum)</a></small></p>
+        <p><small><a href="#">Privacy policy</a></small></p>
+        <p><small><a href="#">Membershiplogin</a></small></p> 
+        <p><small><a href="#">Delivery times</a></small></p>  
+        <p><small><a href="#">Advertise</a></small></p>
         <div id="cage">
 
         </div>
