Colors styled, footer is waiting

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
         <p>Tasting Part 4</p>
         <p><small>#UI<sup>83</sup>#API<sup>54</sup>#Testing<sup>50</sup></small></p>
       </article>
+      <article>
+        <h2>Seriously red?</h2>
+        <p>Kevin Omereshone wrote</p>
+        <p>Mirage JS Deepdive:</p>
+        <p>Using Mirage JS And </p>
+        <p>Cypress for UI Testing</p>
+        <p>Tasting Part 4</p>
+        <p><small>#UI<sup>83</sup>#API<sup>54</sup>#Testing<sup>50</sup></small></p>
+      </article>
     </div>
     <div class="second-section">
       <article>
